# dbcommands

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
fbs_dienste/: CMakeLists.txt
fbs_dienste/include/: ifbslibdef.h  par_param.h
fbs_dienste/source/: dbcommands.cpp  ifb_compeval.cpp  ifb_setpar.cpp  ifb_varprops.cpp
